--- a/login.html
+++ b/login.html
@@ -8,13 +8,15 @@
 </head>
 <body>
   <!-- Hotel name -->
-  <header class="hotel-name">
-    <h1>Mount n' Mist</h1>
-  </header>
+ 
+    <h1 class="hotel-name">Mount n' Mist</h1>
+    <h2 class="sub_heading">"where every stay feels like home" </h2>
+
+
 
   <!-- Login form -->
   <div class="signup-container">
-    <h2>Login to Your Account</h2>
+    <h3>Login to Your Account</h3>
     <form>
       <label for="email">Email</label>
       <input type="email" id="email" placeholder="Enter email" required>
