--- a/signup.html
+++ b/signup.html
@@ -8,9 +8,9 @@
 </head>
 <body>
   <!-- Hotel name on top -->
-  <header class="hotel-name">
-    <h1>Mount n' Mist</h1>
-  </header>
+  <h1 class="hotel-name">Mount n' Mist</h1>
+    <h2 class="sub_heading">"where every stay feels like home" </h2>
+
 
   <div class="signup-container">
     <h2>Create Account</h2>
