--- a/homepage.html
+++ b/homepage.html
@@ -26,7 +26,7 @@
       <p>Luxury Stay • Prime Location • Comfort Redefined</p>
     </div>
     <div class="hero-img">
-      <img src="IMG-20251001-WA0096.jpg" alt="Hotel Image">
+      <img src="homepagetitle.jpg" alt="Hotel Image">
     </div>
   </section>
 
@@ -35,19 +35,19 @@
     <h2>Choose Your Room</h2>
     <div class="room-grid">
       <div class="room-tile">
-        <img src="room1.jpg" alt="Luxury Suite">
+        <img src="luxuryhomepage.jpg" alt="Luxury Suite">
         <h3>Luxury Suite</h3>
         <p>King bed • Sea view • Jacuzzi</p>
         <button>See More</button>
       </div>
       <div class="room-tile">
-        <img src="room2.jpg" alt="Deluxe Room">
+        <img src="deluxehomepage.jpg" alt="Deluxe Room">
         <h3>Deluxe Room</h3>
         <p>Double bed • Free WiFi • Balcony</p>
         <button>See More</button>
       </div>
       <div class="room-tile">
-        <img src="room3.jpg" alt="Standard Room">
+        <img src="standeredhomepage.jpg" alt="Standard Room">
         <h3>Standard Room</h3>
         <p>AC • TV • Breakfast included</p>
         <button>See More</button>
@@ -66,13 +66,13 @@
   </section>
 
   <!-- Gallery -->
-  <section class="gallery">
-    <h2>Gallery</h2>
+  <section class="Gallery">
+    <h2>PERKS</h2>
     <div class="gallery-grid">
-      <img src="photo1.jpg" alt="">
-      <img src="photo2.jpg" alt="">
-      <img src="photo3.jpg" alt="">
-      <img src="photo4.jpg" alt="">
+      <img src="roomser.jpg" alt="">
+      <img src="surrf.jpg" alt="">
+      <img src="waterpark.jpg" alt="">
+      <img src="wifi.jpg" alt="">
     </div>
   </section>
 
