--- a/homepage.html
+++ b/homepage.html
@@ -38,19 +38,19 @@
         <img src="luxuryhomepage.jpg" alt="Luxury Suite">
         <h3>Luxury Suite</h3>
         <p>King bed • Sea view • Jacuzzi</p>
-        <button>See More</button>
+        <button onclick="window.location.href='luxury.html'">See More </button>
       </div>
       <div class="room-tile">
         <img src="deluxehomepage.jpg" alt="Deluxe Room">
         <h3>Deluxe Room</h3>
         <p>Double bed • Free WiFi • Balcony</p>
-        <button>See More</button>
+        <button onclick="window.location.href='deluxe.html'">See More</button>
       </div>
       <div class="room-tile">
         <img src="standeredhomepage.jpg" alt="Standard Room">
         <h3>Standard Room</h3>
         <p>AC • TV • Breakfast included</p>
-        <button>See More</button>
+        <button onclick="window.location.href='standered.html'">See More</button>
       </div>
     </div>
   </section>
